--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 <a href="howitworks.html" class="btn btn-default" role="button">read more</a>
 </div>
 <div class=button2>
-<a href="languagemapping.html" class="btn btn-default" role="button">download pdf</a>
+<a href="languagemapping.html" class="btn btn-default" role="button">Try online</a>
 </div>
 <div class=button3>
 <a href="buymap.html" class="btn btn-default" role="button">buy map</a>
