--- a/languagemapping.html
+++ b/languagemapping.html
@@ -44,13 +44,13 @@
           </div>
         </div>
         <div class="col-lg-6 map-column">
-          <a href="language mapping" class="btn btn-default map-button" role="button">download Englsih-Chinese template</a><br><br>
+          <a href= "https://drive.google.com/drive/folders/0B6B8NSarY-poNDRxMm8ta0YwcWc" "language mapping" class="btn btn-default map-button" role="button">download Englsih-Chinese template</a><br><br>
 
-            <a href="language mapping" class="btn btn-default map-button" role="button">download Englsih-Hebrew template</a><br><br>
+            <a href="https://drive.google.com/drive/folders/0B6B8NSarY-poNDRxMm8ta0YwcWc" "language mapping" class="btn btn-default map-button" role="button">download Englsih-Hebrew template</a><br><br>
 
-              <a href="language mapping" class="btn btn-default map-button" role="button">download Englsih-Spanish template</a><br><br>
+              <a href= "language mapping" class="btn btn-default map-button" role="button">download Englsih-Spanish template</a><br><br>
 
-                <a href="language mapping" class="btn btn-default map-button" role="button">download Englsih-Russian template</a><br><br>
+                <a href= "https://drive.google.com/drive/folders/0B6B8NSarY-poNDRxMm8ta0YwcWc"  "language mapping" class="btn btn-default map-button" role="button">download Englsih-Russian template</a><br><br>
 
         </div>
       </div>
